feat(login-dialog): enhance error handling and user feedback in Nostr Connect process

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -233,7 +233,7 @@
 
     @if (nostrConnectError()) {
     <div class="extension-error">
-      <p>{{ nostrConnectError() }}</p>
+      <p>Error: {{ nostrConnectError() }}</p>
     </div>
     }
 
