--- a/src/app/components/login-dialog/login-dialog.component.scss
+++ b/src/app/components/login-dialog/login-dialog.component.scss
@@ -940,6 +940,8 @@
   border: 1px solid var(--mat-divider-color, rgba(0, 0, 0, 0.05));
   position: relative;
   overflow: hidden;
+  -webkit-user-select: text;
+  user-select: text;
 
   &::after {
     content: '';
