feat(note-editor-dialog): add silence detection to automatically stop recording

--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -317,6 +317,8 @@
         matTooltip="Dictate note">
         @if (isTranscribing()) {
         <mat-icon class="spinning">sync</mat-icon>
+        } @else if (isRecording()) {
+        <mat-icon>stop</mat-icon>
         } @else {
         <mat-icon>mic</mat-icon>
         }
