--- a/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
+++ b/src/app/pages/media/video-record-dialog/video-record-dialog.component.html
@@ -24,7 +24,7 @@
         <span>Recording</span>
       </div>
 
-      <div class="time-remaining">
+      <div class="time-remaining">f
         @if (isShortForm) {
         {{ timeRemaining().toFixed(1) }}s remaining
         } @else {
