--- a/src/app/components/audio-player/audio-player.component.scss
+++ b/src/app/components/audio-player/audio-player.component.scss
@@ -7,6 +7,7 @@
   padding: 4px 16px 4px 4px;
   width: 100%;
   box-sizing: border-box;
+  margin-top: 8px;
 
   @media (max-width: 600px) {
     padding-right: 12px;
