feat: add min-width to account avatar for consistent sizing

--- a/src/app/pages/accounts/accounts.component.scss
+++ b/src/app/pages/accounts/accounts.component.scss
@@ -36,6 +36,7 @@
 .account-avatar {
   width: 60px;
   height: 60px;
+  min-width: 60px;
   border-radius: 50%;
   overflow: hidden;
   display: flex;
