--- a/src/app/pages/messages/messages.component.scss
+++ b/src/app/pages/messages/messages.component.scss
@@ -2,6 +2,7 @@
   display: block;
   height: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .messages {
@@ -9,6 +10,7 @@
   flex-wrap: nowrap;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .messages-left {
@@ -19,6 +21,7 @@
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  min-height: 0;
 
   // On larger screens, increase to 420px
   @media (min-width: 1200px) {
@@ -141,6 +144,9 @@
   flex-direction: column;
   height: 100%;
   flex: 1;
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
 
   // On mobile, hide when showing list
   @media (max-width: 599px) {
