--- a/src/app/pages/messages/messages.component.scss
+++ b/src/app/pages/messages/messages.component.scss
@@ -11,6 +11,10 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  @media (max-width: 599px) {
+    padding-bottom: calc(60px + env(safe-area-inset-bottom, 0px));
+  }
 }
 
 .messages-left {
